plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/projectIsolation/jvmDependsOnJvm/app/src/main/kotlin/Main.kt
fun <!LINE_MARKER!>main<!>() {
    val currentDate = DateUtils.getCurrentDate()
    println("Today's date is: $currentDate")
}
